feat(后端):实现学生和教练注册路由和dto
